--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="scripts/scripts.js"></script>
+    <script src="../dist/main.js"></script>
 </head>
 <body>
 
-<button id="btn" onclick="fetchAndParseData()">Click me</button>
+<button id="btn" onclick="main.fetchAndParseData()">Click me</button>
 
 <div id="data"></div>
 
